force-app/main/default/objects/CountryLanguage__c/CountryLanguage__c.object-meta.xml
<CustomObject>
    <label>CountryLanguage</label>
    <nameField>
        <label>CountryLanguage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CountryLanguages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>