force-app/main/default/objects/CountryLanguage__c/fields/ATG_Locale__c.field-meta.xml
<CustomField>
    <fullName>ATG_Locale__c</fullName>
    <label>ATG Locale</label>
    <length>6</length>
    <type>Text</type>
</CustomField>