force-app/main/default/objects/CountryLanguage__c/fields/Catalogue_Locale__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Locale__c</fullName>
    <label>Catalogue Locale</label>
    <length>6</length>
    <type>Text</type>
</CustomField>