force-app/main/default/objects/CountryLanguage__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Locales</relationshipLabel>
    <relationshipName>CountryLanguages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>