force-app/main/default/objects/CountryLanguage__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is default locale for related country</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>