force-app/main/default/objects/CountryLanguage__c/fields/defaultStore__c.field-meta.xml
<CustomField>
    <fullName>defaultStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>defaultStore</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>CountryLanguages</relationshipLabel>
    <relationshipName>CountryLanguages</relationshipName>
    <type>Lookup</type>
</CustomField>