force-app/main/default/objects/CountryLanguage__c/fields/Dispatch_Country__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Country__c</fullName>
    <label>Dispatch Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>