force-app/main/default/objects/CountryLanguage__c/fields/Footer_Config__c.field-meta.xml
<CustomField>
    <fullName>Footer_Config__c</fullName>
    <label>Footer Config</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>