force-app/main/default/objects/CountryLanguage__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <referenceTo>Language2__c</referenceTo>
    <relationshipLabel>Locale</relationshipLabel>
    <relationshipName>CountryLanguages</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>