force-app/main/default/objects/CountryLanguage__c/fields/LVConnect_CS_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>LVConnect_CS_PhoneNumber__c</fullName>
    <description>Customer Service phone number for LV Connect App</description>
    <label>LV Connect CS Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>