force-app/main/default/objects/CountryLanguage__c/fields/Mulesoft_Local__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Local__c</fullName>
    <label>Mulesoft Local</label>
    <length>18</length>
    <type>Text</type>
</CustomField>