force-app/main/default/objects/CountryLanguage__c/fields/OneData_Locale__c.field-meta.xml
<CustomField>
    <fullName>OneData_Locale__c</fullName>
    <label>OneData Locale</label>
    <length>6</length>
    <type>Text</type>
</CustomField>