force-app/main/default/objects/CountryLanguage__c/fields/OOB_Local__c.field-meta.xml
<CustomField>
    <fullName>OOB_Local__c</fullName>
    <description>local for order on behalf twist iconics only</description>
    <label>OOB Local</label>
    <length>25</length>
    <type>Text</type>
</CustomField>