force-app/main/default/objects/CountryLanguage__c/fields/OOB_payloadLocal__c.field-meta.xml
<CustomField>
    <fullName>OOB_payloadLocal__c</fullName>
    <label>OOB_payloadLocal</label>
    <length>25</length>
    <type>Text</type>
</CustomField>