force-app/main/default/objects/CountryLanguage__c/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <label>Page Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>