force-app/main/default/objects/CountryLanguage__c/fields/Salesforce_Language__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Language__c</fullName>
    <label>Salesforce Language</label>
    <length>6</length>
    <type>Text</type>
</CustomField>