force-app/main/default/objects/CountryLanguage__c/fields/Salesforce_Locale__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Locale__c</fullName>
    <label>Salesforce Locale</label>
    <length>6</length>
    <type>Text</type>
</CustomField>