force-app/main/default/objects/CountryLanguage__c/fields/VoiceAPILanguages__c.field-meta.xml
<CustomField>
    <fullName>VoiceAPILanguages__c</fullName>
    <description>Map API VOICE values with SF language User</description>
    <label>Voice API Languages</label>
    <length>6</length>
    <type>Text</type>
</CustomField>