force-app/main/default/objects/CountryLanguage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Language__c</columns>
    <columns>Default__c</columns>
    <columns>ATG_Locale__c</columns>
    <columns>Dispatch_Country__c</columns>
    <columns>Mulesoft_Local__c</columns>
    <columns>Footer_Config__c</columns>
    <columns>OOB_payloadLocal__c</columns>
    <columns>OOB_Local__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ATG_Locale__c</field>
        <operation>notEqual</operation>
        <value>eng-e1</value>
    </filters>
    <label>All</label>
</ListView>